Grammar.txt
CompilationUnit = Functions
Functions = Function | Functions Function

Function = Type Name LParen Parameters RParen Block
         | Type Name LParen            RParen Block
Parameters = Type Name | Parameters Comma Type Name

Block = LBrace Statements RBrace

Statements = epsilon | Statements Statement
Statement = Assignment | Block | BreakStatement | ContinueStatement | IfStatement | ReturnStatement | VariableDefinition | WhileStatement |
            FunctionCallExpression Semicolon

Assignment = Name Equals Expression Semicolon
BreakStatement = BreakKeyword Semicolon | BreakKeyword IntegerLiteral Semicolon
ContinueStatement = ContinueKeyword Semicolon | ContinueKeyword IntegerLiteral Semicolon
IfStatement = IfKeyword Expression Block | IfKeyword Expression Block ElseKeyword Block | IfKeyword Expression Block ElseKeyword IfStatement
ReturnStatement = ReturnKeyword Expression Semicolon
VariableDefinition = Type Name Semicolon | Type Name Equals Expression Semicolon
WhileStatement = WhileKeyword Expression Block

Type = BooleanKeyword |
       DoubleKeyword  | FloatKeyword  |
       ULongKeyword   | LongKeyword   |
       UIntKeyword    | IntKeyword    |
       UShortKeyword  | ShortKeyword  |
       UByteKeyword   | ByteKeyword   |
       LSquare RSquare Type

Expression = ComparisonExpression |
             Expression Ampersand       ComparisonExpression |
             Expression Pipe            ComparisonExpression |
             Expression Caret           ComparisonExpression |
             Expression DoubleAmpersand ComparisonExpression |
             Expression DoublePipe      ComparisonExpression
ComparisonExpression = AdditiveExpression |
                       AdditiveExpression DoubleEquals          AdditiveExpression |
                       AdditiveExpression ExclamationMarkEquals AdditiveExpression |
                       AdditiveExpression LAngle                AdditiveExpression |
                       AdditiveExpression LAngleEquals          AdditiveExpression |
                       AdditiveExpression RAngle                AdditiveExpression |
                       AdditiveExpression RAngleEquals          AdditiveExpression
AdditiveExpression = MultiplicativeExpression |
                     AdditiveExpression Plus MultiplicativeExpression |
                     AdditiveExpression Minus MultiplicativeExpression
MultiplicativeExpression = UnaryExpression |
                           MultiplicativeExpression Star          UnaryExpression |
                           MultiplicativeExpression ForwardSlash  UnaryExpression |
                           MultiplicativeExpression Percent       UnaryExpression |
                           MultiplicativeExpression DoublePercent UnaryExpression
UnaryExpression = Primary |
                  CastKeyword LAngle Type RAngle UnaryExpression |
                  Minus UnaryExpression |
                  Tilde UnaryExpression |
                  ExclaimationMark UnaryExpression
Primary = IntegerLiteral | DoubleLiteral | TrueKeyword | FalseKeyword |
          Name |
          NewKeyword Dimensions Type |
          NewKeyword LSquare RSquare Type LBrace RBrace |
          NewKeyword LSquare RSquare Type LBrace ExpressionList RBrace |
          Primary Dot Name |
          FunctionCallExpression |
          LParen Expression RParen
FunctionCallExpression = Name LParen ExpressionList RParen | Name LParen RParen
ExpressionList = Expression | ExpressionList Comma Expression

Dimensions = LSquare Expression RSquare | Dimensions LSquare Expression RSquare
